Custom CSS cursors do not use -webkit-image-set on retina displays https://bugs.webkit.org/show_bug.cgi?id=120783 .:

Reviewed by Beth Dakin.

Add a manual test for custom CSS cursors on retina displays.

* ManualTests/retina-cursors.html: Added.

Source/WebCore:

<rdar://problem/14921432>

Reviewed by Beth Dakin.

Scale NSCursor images correctly so custom CSS cursors work with
-webkit-image-set on retina displays.

* WebCore.exp.in:
* page/EventHandler.cpp:
(WebCore::EventHandler::selectCursor):
* platform/mac/CursorMac.mm:
(WebCore::createCustomCursor):
(WebCore::Cursor::ensurePlatformCursor):

Source/WebKit2:

Reviewed by Beth Dakin.

Serialize the cursor image scale for SetCursor messages so custom
CSS cursors work with -webkit-image-set on retina displays.

* Shared/WebCoreArgumentCoders.cpp:
(CoreIPC::ArgumentCoder<Cursor>::encode):
(CoreIPC::ArgumentCoder<Cursor>::decode):


Canonical link: https://commits.webkit.org/161810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182869 268f45cc-cd09-0410-ab3c-d52691b4dbfc